Update _quarto.yml - line 22 image amendment

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,7 +18,7 @@ website:
     - edit
     - issue
   navbar:
-    logo: "images/Essex PNG.png"
+    logo: "images/Essex.png"
     left:
       - href: index.qmd
         text: Home
